--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,3 +1,8 @@
+#texto-en-imagen{
+  background-color: rgba(0, 0, 0, 0.5);
+  text-align: right;
+  padding: 1rem;
+}
 
 .container1 {
   position: relative;
